<resources>
    <string name="app_name">REG</string>


    <!--RegistrationActivity-->
    <string name="tv_title_create_account">Create an account</string>
    <string name="et_hint_name_reg">Enter a name</string>
    <string name="et_hint_login_reg">Enter your username</string>
    <string name="et_hint_pass_reg">Enter the password</string>
    <string name="b_registration">Registration</string>

    <!--AuthorizeFragment-->
    <string name="tv_title_aut">Log in to your account</string>
    <string name="et_hint_login_aut">Enter your username</string>
    <string name="et_hint_pass_aut">Enter the password</string>
    <string name="tv_reg">Registration</string>
    <string name="b_authorize">Log in</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="b_start">Начать</string>


</resources>